--- a/test-output/SparkReport/Spark.html
+++ b/test-output/SparkReport/Spark.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary"></span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Mar 27, 2023 11:29:54 AM</span></a>
+<a href="#"><span class="badge badge-primary">Mar 27, 2023 12:14:42 PM</span></a>
 </li>
 </ul>
 </div>
@@ -66,13 +66,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Mar 27, 2023 11:29:54 AM</h3>
+<h3>Mar 27, 2023 12:14:42 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Mar 27, 2023 11:30:04 AM</h3>
+<h3>Mar 27, 2023 12:14:55 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -162,7 +162,7 @@
 </div></div>
 <script>
 var timeline = {
-"Google naviagte":3.232
+"Google naviagte":2.919
 };
 </script>
 <div class="row">
@@ -263,7 +263,7 @@ eventsCount: 5,
           <div class="test-detail">
             <p class="name">Google naviagte</p>
             <p class="text-sm">
-              <span>11:30:00 AM</span> / <span>00:00:03:232</span>
+              <span>12:14:51 PM</span> / <span>00:00:02:919</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -272,9 +272,9 @@ eventsCount: 5,
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Google naviagte</h5>
-<span class='badge badge-success'>03.27.2023 11:30:00 AM</span>
-<span class='badge badge-danger'>03.27.2023 11:30:03 AM</span>
-<span class='badge badge-default'>00:00:03:232</span>
+<span class='badge badge-success'>03.27.2023 12:14:51 PM</span>
+<span class='badge badge-danger'>03.27.2023 12:14:54 PM</span>
+<span class='badge badge-default'>00:00:02:919</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
@@ -343,7 +343,7 @@ eventsCount: 5,
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>11:30:00 AM</td>
+<td>12:14:51 PM</td>
 <td>
 <a href="#" class="linked" test-id='1' id='2'>Verify Google naviagte</a>
 <div class="">
