--- a/test-output/Execution reports/ExtentHtml.html
+++ b/test-output/Execution reports/ExtentHtml.html
@@ -53,7 +53,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Mar 27, 2023 11:29:54 AM</span>
+			<span class='label blue darken-3 suite-start-time'>Mar 27, 2023 12:14:42 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -191,7 +191,7 @@
 				<li class='test displayed active has-leaf pass' status='pass' bdd='true' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Google naviagte</span>
-						<span class='test-time'>Mar 27, 2023 11:30:00 AM</span>
+						<span class='test-time'>Mar 27, 2023 12:14:51 PM</span>
 						<span class='test-status right pass'>Pass</span>
 					</div>
 					<div class='test-content hide'>
@@ -204,7 +204,7 @@
 
 <div class='scenario node' test-id='2' status='pass'>
 
-	<span class='duration right label'>00 00 03.226</span>
+	<span class='duration right label'>00 00 02.909</span>
 	<div class="bdd-test">
 		<div class="scenario-name"><span class='status pass' title='Pass'><i class='material-icons'>check_circle</i></span> Scenario: Verify Google naviagte</div>
 	</div>
@@ -288,7 +288,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Mar 27, 2023 11:30:00 AM</td>
+										<td>Mar 27, 2023 12:14:51 PM</td>
 										<td class='linked' test-id='2'>Verify Google naviagte</td>
 										<td><span class='test-status Pass'>Pass</span></td>
 									</tr>
@@ -332,19 +332,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 27, 2023 11:29:54 AM</div>
+					<div class='panel-lead'>Mar 27, 2023 12:14:42 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 27, 2023 11:30:04 AM</div>
+			 		<div class='panel-lead'>Mar 27, 2023 12:14:55 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>00 00 10.371</div>
+					<div class='panel-lead'>00 00 12.587</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -435,7 +435,7 @@
 		
 		<script>
 			var timeline = {
-			        "Google naviagte":3.232
+			        "Google naviagte":2.919
 			};
 		</script>
 		
